<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".S2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="50dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="What's Your Height"
            android:textColor="#000"
            android:layout_marginStart="50dp"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown"/>

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/what_s_your_religion"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="50dp"
            android:text="@string/what_s_your_community"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/do_you_smoke"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_status"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_drinking_habits"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />
        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/mother_toungue"
            android:textColor="#000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/btn_dropdown" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Move to Next Activity"
            android:layout_below="@id/spinner6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>




    </LinearLayout>

</ScrollView>